# continuoso

./: .env.example  .gitignore  README.md  pyproject.toml
config/: budgets.yaml  dangerous_paths.yaml  goals.yaml  routing.yaml
continuoso/: __init__.py  cli.py  config.py  evaluator.py  executor.py  feature_log.py  json_compact.py  json_parse.py  llm_trace.py  logging_setup.py  main.py  memory.py  observer.py  orchestrator.py  parallel_exec.py  planner.py  prompts.py  router.py  safeguards.py  sandbox.py
continuoso/llm/: __init__.py  base.py  claude_code.py  ollama.py  openrouter.py  wait_heartbeat.py
