[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "continuoso"
version = "0.1.0"
description = "Autonomous self-improving development loop"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "click>=8.1",
]

[project.scripts]
continuoso = "continuoso.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["continuoso*"]
